force-app/main/default/objects/CartItem/fields/PMC_DH_AccountPartnerRelationship__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_AccountPartnerRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>PMC_SS_AccountPartnerRelationships__c</referenceTo>
    <relationshipLabel>Cart Items (Ship To)</relationshipLabel>
    <relationshipName>Cart_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>