force-app/main/default/objects/CartItem/fields/PMC_DH_BasePONumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_BasePONumber__c</fullName>
    <label>Base PO Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>