force-app/main/default/objects/CartItem/fields/PMC_DH_Contract__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>