force-app/main/default/objects/CartItem/fields/PMC_DH_DeliveryInstructions__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_DeliveryInstructions__c</fullName>
    <label>Delivery Instructions</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>