force-app/main/default/objects/CartItem/fields/PMC_DH_DeliveryMode__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_DeliveryMode__c</fullName>
    <label>Delivery Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barge</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
            <value>
                <fullName>Inventory Transfer</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>