force-app/main/default/objects/CartItem/fields/PMC_DH_EMPTYCONST1__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_EMPTYCONST1__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>EMPTYCONST1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>