force-app/main/default/objects/CartItem/fields/PMC_DH_Frequency__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>