force-app/main/default/objects/CartItem/fields/PMC_DH_GroupReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_GroupReferenceNumber__c</fullName>
    <description>This is the group reference number for request id that needs to be send to sap</description>
    <label>Group Reference Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>