force-app/main/default/objects/CartItem/fields/PMC_DH_HarvestPeriod__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_HarvestPeriod__c</fullName>
    <defaultValue>&quot;Present&quot;</defaultValue>
    <label>HarvestPeriod</label>
    <length>10</length>
    <type>Text</type>
</CustomField>