force-app/main/default/objects/CartItem/fields/PMC_DH_Incoterms2__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Incoterms2__c</fullName>
    <defaultValue>&apos;SAP/Supply chain&apos;</defaultValue>
    <label>Incoterms2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>