force-app/main/default/objects/CartItem/fields/PMC_DH_Incoterms__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Incoterms__c</fullName>
    <label>Incoterms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>