force-app/main/default/objects/CartItem/fields/PMC_DH_IsReorder__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_IsReorder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This value will be true if cart item is created for reorder</description>
    <label>Is Reorder</label>
    <type>Checkbox</type>
</CustomField>