force-app/main/default/objects/CartItem/fields/PMC_DH_ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_ItemNumber__c</fullName>
    <label>PMC DH Item Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>