force-app/main/default/objects/CartItem/fields/PMC_DH_NotaFiscalDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_NotaFiscalDate__c</fullName>
    <label>PMC DH Nota Fiscal Date</label>
    <type>Date</type>
</CustomField>