force-app/main/default/objects/CartItem/fields/PMC_DH_NotaFiscalNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_NotaFiscalNumber__c</fullName>
    <label>PMC DH Nota Fiscal Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>