force-app/main/default/objects/CartItem/fields/PMC_DH_Number__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Number__c</fullName>
    <label>Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>