force-app/main/default/objects/CartItem/fields/PMC_DH_PackageType__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_PackageType__c</fullName>
    <description>This field captures the package type for the product associated.</description>
    <label>Packaging Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Big Bag 1500 Kg</fullName>
            </value>
            <value>
                <fullName>Big Bag 1350 Kg</fullName>
            </value>
            <value>
                <fullName>Big Bag 1000 Kg</fullName>
            </value>
            <value>
                <fullName>Saco 50 Kg</fullName>
            </value>
            <value>
                <fullName>Saco 30 Kg</fullName>
            </value>
            <value>
                <fullName>Saco 25 Kg</fullName>
            </value>
            <value>
                <fullName>Saco 50 Kg - Paletizado</fullName>
            </value>
            <value>
                <fullName>Saco 25 Kg - Paletizado</fullName>
            </value>
            <value>
                <fullName>25KG Bags</fullName>
            </value>
            <value>
                <fullName>50KG Bags</fullName>
            </value>
            <value>
                <fullName>Transp. Valved NPK</fullName>
            </value>
            <value>
                <fullName>Transp. Valved Urea</fullName>
            </value>
            <value>
                <fullName>Braided   Valved</fullName>
            </value>
            <value>
                <fullName>BagOneWay 90x90x1,30</fullName>
            </value>
            <value>
                <fullName>BagOneWay 500Kg</fullName>
            </value>
            <value>
                <fullName>BagOneWay Liner 1,40</fullName>
            </value>
            <value>
                <fullName>Bag ONE-Way-Liner Urea 99x99x1,40</fullName>
            </value>
            <value>
                <fullName>Bag One Way Liner 500kg Liner 90X</fullName>
            </value>
            <value>
                <fullName>Tranç. Nitrog. Laminated</fullName>
            </value>
            <value>
                <fullName>Tranç. Urea Laminated</fullName>
            </value>
            <value>
                <fullName>Trançada com Liner</fullName>
            </value>
            <value>
                <fullName>BagOneWayLiner 750kg</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Sifted Bulk</fullName>
            </value>
            <value>
                <fullName>Bulk - Mosaic Production</fullName>
            </value>
            <value>
                <fullName>Big BagOneWay Liner</fullName>
            </value>
            <value>
                <fullName>Saco 30 Kg - Paletizado</fullName>
            </value>
            <value>
                <fullName>1000 KG Bags</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>