force-app/main/default/objects/CartItem/fields/PMC_DH_PackType__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_PackType__c</fullName>
    <description>This field captures the Pack type of the product associated.</description>
    <label>Pack Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Packed</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>