force-app/main/default/objects/CartItem/fields/PMC_DH_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_PaymentTerms__c</fullName>
    <formula>IF(AND(!ISNULL(TEXT(( Cart.PMC_DH_PaymentTerms__c ))),! ISBLANK(TEXT(  Cart.PMC_DH_PaymentTerms__c))),TEXT( Cart.PMC_DH_PaymentTerms__c),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>