force-app/main/default/objects/CartItem/fields/PMC_DH_PlantShipFrom__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_PlantShipFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship From</label>
    <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
    <relationshipLabel>Cart Items (Ship From)</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>