force-app/main/default/objects/CartItem/fields/PMC_DH_POIncrementBy__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_POIncrementBy__c</fullName>
    <label>PO Increment By</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>