force-app/main/default/objects/CartItem/fields/PMC_DH_Prepay__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Prepay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepay</label>
    <type>Checkbox</type>
</CustomField>