force-app/main/default/objects/CartItem/fields/PMC_DH_ProtocolNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_ProtocolNumber__c</fullName>
    <label>Protocol Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>