force-app/main/default/objects/CartItem/fields/PMC_DH_RequestedShipmentDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_RequestedShipmentDate__c</fullName>
    <label>PMC DH Requested Shipment Date</label>
    <type>Date</type>
</CustomField>