force-app/main/default/objects/CartItem/fields/PMC_DH_SAP_CT_CONSTANT__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SAP_CT_CONSTANT__c</fullName>
    <defaultValue>&quot;Frieght&quot;</defaultValue>
    <label>SAP CONSTANT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>