force-app/main/default/objects/CartItem/fields/PMC_DH_SAP_CT_CONSTANT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SAP_CT_CONSTANT_NUMBER__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>SAP CONSTANT NUMBER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>