force-app/main/default/objects/CartItem/fields/PMC_DH_SAP_CT_CONSTANT_VALUE__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SAP_CT_CONSTANT_VALUE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP CONSTANT VALUE</label>
    <type>Checkbox</type>
</CustomField>