force-app/main/default/objects/CartItem/fields/PMC_DH_SAPRequestReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SAPRequestReferenceNumber__c</fullName>
    <formula>&quot;MD-&quot;+Cart.PMC_DH_CartReferenceNumber__c +&quot;-&quot;+ TEXT(PMC_DH_GroupReferenceNumber__c) +&quot;-&quot;+ TEXT(PMC_DH_ShipmentReferenceNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Request Reference Number</label>
    <type>Text</type>
</CustomField>