force-app/main/default/objects/CartItem/fields/PMC_DH_SellOutPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SellOutPrice__c</fullName>
    <label>PMC DH Sell Out Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>