force-app/main/default/objects/CartItem/fields/PMC_DH_ShipmentReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_ShipmentReferenceNumber__c</fullName>
    <description>This is a reference number for the cart items shipment</description>
    <label>ShipmentReferenceNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>