force-app/main/default/objects/CartItem/fields/PMC_DH_Source__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RFQ</fullName>
                <default>true</default>
                <label>RFQ</label>
            </value>
            <value>
                <fullName>RTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>