force-app/main/default/objects/CartItem/fields/PMC_DH_Subscription__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>