force-app/main/default/objects/CartItem/fields/PMC_DH_UnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_UnitofMeasure__c</fullName>
    <description>This field is created to check unit measurement value.</description>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MTN</fullName>
            </value>
            <value>
                <fullName>STN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>